--- a/internal/templates/02-import.yaml.tmpl
+++ b/internal/templates/02-import.yaml.tmpl
@@ -8,7 +8,43 @@ commands:
 - command: sleep 10
 - command: ${KUBECTL} scale deployment crossplane -n ${CROSSPLANE_NAMESPACE} --replicas=1 --timeout 10s
 - script: ${KUBECTL} -n ${CROSSPLANE_NAMESPACE} get deploy --no-headers -o custom-columns=":metadata.name" | grep "provider-" | xargs ${KUBECTL} -n ${CROSSPLANE_NAMESPACE} scale deploy --replicas=1
-- script: ${KUBECTL} -n ${CROSSPLANE_NAMESPACE} get pods --no-headers -o custom-columns=":metadata.name" | grep "provider-" | xargs ${KUBECTL} -n ${CROSSPLANE_NAMESPACE} wait pods --for=condition=Ready --timeout=60s
+- script: |
+    #!/bin/bash
+
+    function check_endpoints {
+      endpoints=$(${KUBECTL} -n ${CROSSPLANE_NAMESPACE} get endpoints --no-headers | grep '^provider-' | awk '{print $1}')
+
+      for endpoint in $endpoints; do
+        port=$(${KUBECTL} -n ${CROSSPLANE_NAMESPACE} get endpoints $endpoint -o jsonpath='{.subsets[*].ports[0].port}')
+        if [[ -z "${port}" ]]; then
+          echo "$endpoint - No served ports"
+          return 1
+        else
+          echo "$endpoint - Ports present"
+        fi
+      done
+
+      if ${KUBECTL} get managed ; then
+          return 0
+      else
+          return 1
+      fi
+    }
+
+    attempt=1
+    max_attempts=10
+
+    while [[ $attempt -le $max_attempts ]]; do
+        if check_endpoints; then
+            exit 0
+        else
+            printf "Retrying... (%d/%d)\n" "$attempt" "$max_attempts" >&2
+        fi
+        ((attempt++))
+        sleep 5
+    done
+
+    exit 1
 {{- range $resource := .Resources }}
 {{- if eq $resource.KindGroup "secret." -}}
   {{continue}}
