Handle Namespace v1 in the uptest run
* Special skip of the Namespace object similar to Secret
* Fixes #18

Signed-off-by: Yury Tsarev <yury@upbound.io>

--- a/internal/templates/00-assert.yaml.tmpl
+++ b/internal/templates/00-assert.yaml.tmpl
@@ -10,6 +10,9 @@ commands:
 {{- if eq $resource.KindGroup "secret." -}}
   {{continue}}
 {{- end -}}
+{{- if eq $resource.KindGroup "namespace." -}}
+  {{continue}}
+{{- end -}}
 {{- if $resource.PreAssertScriptPath }}
 - command: {{ $resource.PreAssertScriptPath }}
 {{- end }}
