- Use log package instead of fmt - Use configurable timeout for all timeout types - Use CommandContext for applying the global timeout - For preventing memory leak extract the test function
Signed-off-by: Sergen Yalçın <yalcinsergen97@gmail.com>

--- a/internal/templates/00-apply.yaml.tmpl
+++ b/internal/templates/00-apply.yaml.tmpl
@@ -6,9 +6,9 @@ metadata:
   name: apply
 spec:
   timeouts:
-    apply: 1m
+    apply: {{ .TestCase.Timeout }}
     assert: {{ .TestCase.Timeout }}
-    exec: 1m
+    exec: {{ .TestCase.Timeout }}
   steps:
   - name: Run Setup Script
     description: Setup the test environment by running the setup script.
@@ -32,8 +32,8 @@ spec:
     {{- end }}
   - name: Assert Status Conditions
     description: |
-      Assert applied resources. Firstly run the pre-assert script if exists.
-      Then check the status conditions. Finally run the post-assert script if
+      Assert applied resources. First, run the pre-assert script if exists.
+      Then, check the status conditions. Finally run the post-assert script if it
       exists.
     try:
     {{- range $resource := .Resources }}
