--- a/internal/templates/00-assert.yaml.tmpl
+++ b/internal/templates/00-assert.yaml.tmpl
@@ -4,6 +4,7 @@ kind: TestAssert
 timeout: {{ .TestCase.Timeout }}
 commands:
 - command: ${KUBECTL} annotate managed --all upjet.upbound.io/test=true --overwrite
+- script: if [ -n "${CROSSPLANE_CLI}" ]; then ${KUBECTL} get composite --no-headers -o name | while read -r comp; do [ -n "$comp" ] && ${CROSSPLANE_CLI} beta trace "$comp"; done; fi
 - script: echo "Dump MR manifests for the apply assertion step:"; ${KUBECTL} get managed -o yaml
 - script: echo "Dump Claim manifests for the apply assertion step:" || ${KUBECTL} get claim --all-namespaces -o yaml
 {{- range $resource := .Resources }}
