Add assertion for managed resources
Signed-off-by: Sergen Yalçın <yalcinsergen97@gmail.com>

--- a/internal/templates/03-delete.yaml.tmpl
+++ b/internal/templates/03-delete.yaml.tmpl
@@ -45,6 +45,11 @@ spec:
         for:
           deletion: {}
     {{- end }}
+    {{- if not .TestCase.OnlyCleanUptestResources }}
+    - script:
+        content: |
+          ${KUBECTL} wait managed --all --for=delete --timeout -1s
+    {{- end }}
     {{- if .TestCase.TeardownScriptPath }}
     - command:
         entrypoint: {{ .TestCase.TeardownScriptPath }}
