Remove the setup script requirement for the apply step
Signed-off-by: Sergen Yalçın <yalcinsergen97@gmail.com>

--- a/internal/templates/00-apply.yaml.tmpl
+++ b/internal/templates/00-apply.yaml.tmpl
@@ -1,5 +1,4 @@
 # This file belongs to the resource apply step.
-{{ if .TestCase.SetupScriptPath -}}
 apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
@@ -10,11 +9,13 @@ spec:
     assert: {{ .TestCase.Timeout }}
     exec: {{ .TestCase.Timeout }}
   steps:
+  {{- if .TestCase.SetupScriptPath }}
   - name: Run Setup Script
     description: Setup the test environment by running the setup script.
     try:
     - command:
         entrypoint: {{ .TestCase.SetupScriptPath }}
+  {{- end }}
   - name: Apply Resources
     description: Apply resources to the cluster.
     try:
@@ -64,4 +65,3 @@ spec:
         entrypoint: {{ $resource.PostAssertScriptPath }}
     {{- end }}
     {{- end }}
-{{ end }}
