Add e2e tests for uptest and integrate the uptest with namespaced MRs
Signed-off-by: Sergen Yalçın <yalcinsergen97@gmail.com>

--- a/internal/templates/00-apply.yaml.tmpl
+++ b/internal/templates/00-apply.yaml.tmpl
@@ -27,10 +27,8 @@ spec:
     {{- range $i, $resource := .Resources }}
     {{- if eq $resource.KindGroup "secret." -}}
       {{continue}}
-    {{- end -}}
-    {{- if not $resource.Namespace }}
-          ${KUBECTL} annotate {{ $resource.KindGroup }}/{{ $resource.Name }} upjet.upbound.io/test=true --overwrite
     {{- end }}
+          ${KUBECTL} annotate {{ if $resource.Namespace }}--namespace {{ $resource.Namespace }} {{ end }} {{ $resource.KindGroup }}/{{ $resource.Name }} upjet.upbound.io/test=true --overwrite
     {{- end }}
   - name: Assert Status Conditions
     description: |
